--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
 	</div>
 
 	<!-- Подключаем скрипты -->
-<script src="./js/counter.js"></script>
+<script src="js/counter.js"></script>
+<script src="js/cart-01.js"></script>
 </body>
 
 </html>
