--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 					</div>
 
 					<!-- Оформить заказ -->
-					<div id="order-form" class="card-body border-top">
+					<div id="order-form" class="card-body border-top none">
 						<h5 class="card-title">Оформить заказ</h4>
 						<form>
 							<div class="form-group">
@@ -195,6 +195,7 @@
 	</div>
 
 	<!-- Подключаем скрипты -->
+<script src="js/toggleCartStatus.js"></script>
 <script src="js/counter.js"></script>
 <script src="js/cart-02.js"></script>
 </body>
