--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<title>Магазин роллов</title>
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700&amp;subset=cyrillic-ext"
+		rel="stylesheet">
 </head>
 
 <body>
@@ -156,33 +156,41 @@
 				<div class="card mb-4">
 					<div class="card-body">
 						<h5 class="card-title">Ваш заказ</h4>
-						<div data-cart-empty class="alert alert-secondary" role="alert">
-							Корзина пуста
-						</div>
-						<!-- cart-wrapper -->
-						<div class="cart-wrapper">
+							<div data-cart-empty class="alert alert-secondary" role="alert">
+								Корзина пуста
+							</div>
+							<!-- cart-wrapper -->
+							<div class="cart-wrapper">
 
-						</div>
-						<!-- // cart-wrapper -->
+							</div>
+							<!-- // cart-wrapper -->
 
-						<!-- Стоимость заказа -->
-						<div class="cart-total">
-							<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
-							<p><span class="h5">Итого:</span> <span class="total-price">330</span> <span class="rouble">₽</span></p>
-						</div>
-						<!-- // Стоимость заказа -->
+							<!-- Стоимость заказа -->
+							<div class="cart-total">
+								<p data-cart-delivery class="none">
+									<span class="h5">Доставка:</span>
+									<span class="delivery-cost">250 ₽</span>
+									<span class="small text-gray">Бесплатно при заказе от 600</span>
+								</p>
+								<p>
+									<span class="h5">Итого:</span>
+									<span class="total-price">0</span>
+									<span class="rouble">₽</span>
+								</p>
+							</div>
+							<!-- // Стоимость заказа -->
 
 					</div>
 
 					<!-- Оформить заказ -->
 					<div id="order-form" class="card-body border-top none">
 						<h5 class="card-title">Оформить заказ</h4>
-						<form>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Ваш номер телефона">
-							</div>
-							<button type="submit" class="btn btn-primary">Заказать</button>
-						</form>
+							<form>
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Ваш номер телефона">
+								</div>
+								<button type="submit" class="btn btn-primary">Заказать</button>
+							</form>
 					</div>
 					<!-- // Оформить заказ -->
 
@@ -195,9 +203,11 @@
 	</div>
 
 	<!-- Подключаем скрипты -->
-<script src="js/toggleCartStatus.js"></script>
-<script src="js/counter.js"></script>
-<script src="js/cart-02.js"></script>
+	<script src="js/renderProducts.js"></script>
+	<script src="js/calcCartPrice.js"></script>
+	<script src="js/toggleCartStatus.js"></script>
+	<script src="js/counter.js"></script>
+	<script src="js/cart-02.js"></script>
 </body>
 
 </html>
